fixed some css layouts for better visibility

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -6,8 +6,6 @@
 html {
   font-size: 16px;
   line-height: $line-height-normal;
-  overflow-x: hidden;
-  width: 100%;
 }
 
 body {
@@ -17,9 +15,6 @@ body {
   background: $color-bg-primary;
   color: $color-text-primary;
   min-height: 100vh;
-  overflow-x: hidden;
-  position: relative;
-  width: 100%;
 }
 
 // Custom scrollbar
